feat(sse): Add receiving ordres statuses via SEE, code style refactoring
